--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,19 +1,22 @@
-# CHANGELOG
-###### 1.6.3
+### 1.6.3
 - Fix github action script issue
-###### 1.6.2
+
+### 1.6.2
 - Fix bug periodic sudden consumption and generation of all materials for industrial machine forge
-###### 1.6.1
+
+### 1.6.1
 - Fix crash when using reactive shields without a system
-###### 1.6.0
-- Update hullmod smod check to use built in vanilla functions
+
+### 1.6.0
+- Update hullmod smod check to use built-in vanilla functions
 - Update ASH_AdvanceRadarSystems increase sight radius buff to 25% from 20%
 - Update ASH_AdvanceRadarSystems increase auto aim accuracy buff to 50% from 20%
 - Update ASH_TargetingTransceiver change detection to any friendly ships from capital/cruiser ships only
 - Update ASH_TargetingTransceiver decrease overall OP cost to 2/4/6/10 from 3/6/9/15
 - Remove s-mod effect for convicted crewmates
 - Fix crash when s-modding reactor bay and missile bay
-###### 1.5.5
+
+### 1.5.5
 - Update CHANGELOG from md to txt
 - Update LICENSE from md to txt
 - Remove settings.json
@@ -21,7 +24,8 @@
 - Fix missile bay and reactor bay description
 - Update missile bay missile ammo increase to 25% from 50%
 - Update convicted crewmates ppt gain to 5/10/15/25 from 10/20/30/50
-###### 1.5.0
+
+### 1.5.0
 - Update circuit breakers now unlocked at the start
 - Add hullmod sprites for new hullmods
 - Update subverted shields stats reduced shield up keep and shield strength to 15% and reduced shield pierce chance to 25%
@@ -35,7 +39,8 @@
 - Add reactor bay and missile bay to vanilla factions
 - Fix missile bay and reactor bay to only work for built-in fighter bays
 - Add hullmods missile bay & reactor bay
-###### 1.3.5
+
+### 1.3.5
 - Add s-mod effect Industrial Machine Forge
     - Generates 15/30/40/75 machinery every 3 days when s-modded
 - Add s-mod effect for Marine Training Facility
@@ -49,26 +54,33 @@
     - Remove speed and turn rate ship modifiers
     - Add increase sensor profile modifier by 10%
     - Update flat cargo modifiers to 60/120/180/300 from 200/400/600/1000
-###### 1.3.2
+
+### 1.3.2
 - Fix marin training facility crash when getting accessed outside of combat
 - Fix fuel ramscoop crash when getting accessed outside of combat
-###### 1.3.0
+
+### 1.3.0
 - Update mod_info.json lazylib dependecy to any version
 - Update mod_info.json game version to latest
-###### 1.2.9
+
+### 1.2.9
 - Fix Reactive Shields Hullmod crash when shield color changes
 - Fix ASH_ExternalCargoHolds to be installable on ships that support 2 or more logistics hullmod
 - Fix ASH_ExternalCryoPods to be installable on ships that support 2 or more logistics hullmod
 - Fix ASH_ExternalFuelTanks to be installable on ships that support 2 or more logistics hullmod
 - Update ASH_MarineTrainingFacility marines trained to 2/4/6/10 from 5/10/15/25
-###### 1.2.4
+
+### 1.2.4
 - Fix venting overdrive unmodifiying all the modifiers from the stats it uses
-###### 1.2.3
+
+### 1.2.3
 - Fix makeshift missile autoforge crash when viewing as blueprint/modspec
-###### 1.2.2
+
+### 1.2.2
 - Fix hullmod ui when hovering in the market
 - Fix crash when hovering modspec in market
-###### 1.2.0
+
+### 1.2.0
 - Add settings for disabling or enabling mod and compatibility with BDSM
 - Add flux conduction armor s-mod effects
     - Increase flux capacity to 20% when smodded
@@ -100,7 +112,8 @@
 - Add flux limiters s-mod effects
     - Remove fire rate debuff when smodded
 - Add LICENSE.md
-###### 1.0.0
+
+### 1.0.0
 - Update reactive shields & subverted shields visuals
 - Remove unused hullmod sprites
 - Update hullmods base value
@@ -266,7 +279,8 @@ Add missile speed reduction to 10% from 0%
     - Update OP cost to 5/10/15/25 from 5/10/15/20
     - Update compability to incompatible with phase ships from none
     - Fix crash when ship has no shields
-###### 0.8.3
+
+### 0.8.3
 - Updated message from hullmods that generate goods
 - Fixed Industrial Machine Forge not working
 - Updated hullmods descriptions
@@ -274,7 +288,8 @@ Add missile speed reduction to 10% from 0%
 - Updated hullmods tags
 - Fixed Front Loaded Armor tags
 - Fixed External Cryo Pods not affecting max crew value
-###### 0.7.6
+
+### 0.7.6
 - Added Front Loaded Armor Hullmod
 - Fixed logistical hullmods not getting properly checked if installable
 - Added Industrial Machine Forge Hullmod
@@ -285,19 +300,22 @@ Add missile speed reduction to 10% from 0%
 - MarineTF - decreased number of marines generated to 5/10/20/40 from 10/20/40/50
 - MarineTF - Decreased days needed to generate marines to 7 from 30
 - Increase fuel ramscoop fuel generation to 1/2/3/4 from 1/1/2/2
-###### 0.6.7
+
+### 0.6.7
 - Updated temporal flux reactor to be color compatible with reactive shields
 - Fixed temporal flux reactor affecting other ships with the hullmod
 - Fixed reactive shields affecting other ships with the hullmod
 - Fixed marine training facility not giving marines every month
 - Fixed fuel ramscoop not giving fuel every 3 days
-###### 0.6.2
+
+### 0.6.2
 - Added visual indicator for Reactive Shields
 - Added Aligned Thrust Variants
 - Added Temporal Flux Reactor
 - Updated Excessive Venting Protocol to Venting Overdrive
 - Updated mods with default sprites to available game sprites
-###### 0.5.6
+
+### 0.5.6
 - Added Targeting Transciever Sprite by Vildrian
 - Added Marine Training Facility Sprite by Vildrian
 - Added Hull Conversion Sprite by Vildrian
@@ -308,13 +326,15 @@ Add missile speed reduction to 10% from 0%
 - Added Beam Combiner Sprite by Vildrian
 - Added Excessive Venting Protocol Hullmod
 - Added Redundant Machinery Hullmod
-###### 0.4.5
+
+### 0.4.5
 - Added Hull Conversion Hullmod
 - Added Beam Combiners Hullmod
 - Added Marine Training Facility Hullmod
 - Added Fuel Ramscoop Hullmod
 - Added Targeting Receiver Hullmod
-###### 0.4.0
+
+### 0.4.0
 - Added External Cryo Pods Hullmod
 - Added External Fuel Tanks Hullmod
 - Added Makeshift Missile Autoforge Sprite
@@ -333,18 +353,21 @@ Add missile speed reduction to 10% from 0%
 - Added Reactive Subsystems Hullmod
 - Added Overloaded Capacitors Hullmod
 - Added Volatile Ammunition Hullmod
-###### 0.1.8
+
+### 0.1.8
 - Added Enhanced Autoloaders Hullmod
 - Added Energized Capacitors Hullmod
 - Added Extended Barrels Hullmod
 - Added Subatomic Accelerator Hullmod
 - Change Base values and Tiers of certain Hullmods
-###### 0.1.1
+
+### 0.1.1
 - Added 3 new sprites for hullmods
 - Added Subverted Shields sprite
 - Added 3 sprites for existing hullmods
 - Added Makeshift Missile Autoforge
-###### 0.0.7
+
+### 0.0.7
 - Added Flux Conduction Armor Hullmod
 - Added Graviton Attunement Drive Hullmod
 - Added Conductive Rails Hullmod
