--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,7 @@
+### 1.8.6
+- Release 1.8.6
+- Update directDownloadURL link in version file
+
 ### 1.8.5
 - Release 1.8.5
 - Add MineralRefinery sprite
