--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,8 @@
+### 1.9.4
+- Release 1.9.4
+- Update hullmod stats to reflect settings file
+- Add hullmod settings file
+
 ### 1.9.3a
 - Release 1.9.3a
 - Update GitHub action script
