--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,9 @@
+### 1.9.5
+- Release 1.9.5
+- Update circuit breakers tags and uitags to defenses
+- Add lunalib integration
+- Add lunalib settings file
+
 ### 1.9.4
 - Release 1.9.4
 - Update hullmod stats to reflect settings file
