--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,7 @@
+### 2.0.0a
+- Release 2.0.0a
+- Fix crash with forging ability during the tutorial
+
 ### 2.0.0
 - Release 2.0.0
 - Update sprite names to match hullmod ids
