--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,10 @@
+### 2.1.1a
+- Release 2.1.1a
+- Fix production hullmods including mothballed ships when producing commodities
+- Fix supplies recycler causing lag due to reapplication of stats every frame
+- Update hull mod descriptions
+- Add streamlined bubble drive hullmod
+
 ### 2.1.0a
 - Release 2.1.0a
 - Fix marine training facility enable and disable function not working
